--- a/Q1.md
+++ b/Q1.md
@@ -1,111 +1,84 @@
+
+
+⸻
+
 I. Selected Software Architecture Style
 
 Chosen Architecture: Layered Architecture
+
+⸻
 
 A. Justification Based on Granularity 
 
 Why the System Falls Under Layered Architecture
 
-The "Automated CI/CD Pipeline with Intelligent Failure Recovery" is structured into well-defined logical layers. Each layer performs a specific responsibility and interacts only with adjacent layers.
+The “Automated CI/CD Pipeline with Intelligent Failure Recovery” is structured into well-defined logical layers. Each layer performs a specific responsibility and interacts only with adjacent layers.
 
 Granularity of Software Components
 
 The system is divided into the following coarse-grained layers:
 
 1. Presentation Layer
-
-Admin Dashboard
-
-Pipeline Status Display
-
-Report Viewer
+	•	Admin Dashboard
+	•	Pipeline Status Display
+	•	Report Viewer
 
 2. Application / Business Logic Layer
-
-CICDPipeline
-
-BuildManager
-
-TestManager
-
-DeploymentManager
-
-FailureAnalyzer
-
-RecoveryManager
-
-ReportGenerator
+	•	CICDPipeline
+	•	BuildManager
+	•	TestManager
+	•	DeploymentManager
+	•	FailureAnalyzer
+	•	RecoveryManager
+	•	ReportGenerator
 
 3. Integration Layer
-
-VersionControlSystem (Git Integration)
-
-Deployment Platform Interface
-
-Notification Service
+	•	VersionControlSystem (Git Integration)
+	•	Deployment Platform Interface
+	•	Notification Service
 
 4. Data Layer
-
-Source Code Repository
-
-Build Artifacts Storage
-
-Test Reports Database
-
-Failure Logs Database
-
-Pipeline History Storage
+	•	Source Code Repository
+	•	Build Artifacts Storage
+	•	Test Reports Database
+	•	Failure Logs Database
+	•	Pipeline History Storage
 
 Structural Characteristics
+	•	Clear separation of concerns
+	•	Business logic isolated from UI
+	•	Failure recovery encapsulated in service layer
+	•	Each layer communicates only with adjacent layers
 
-Clear separation of concerns
-
-Business logic isolated from UI
-
-Failure recovery encapsulated in service layer
-
-Each layer communicates only with adjacent layers
+⸻
 
 B. Why Layered Architecture is the Best Choice 
 
 1. Scalability
-
-Supports multiple concurrent pipelines
-
-New modules can be added without affecting other layers
-
-Failure analysis and recovery can be enhanced independently
+	•	Supports multiple concurrent pipelines
+	•	New modules can be added without affecting other layers
+	•	Failure analysis and recovery can be enhanced independently
 
 2. Maintainability
-
-Independent modules for build, test, deployment, and recovery
-
-Easy debugging due to modular separation
-
-Code changes in one layer do not heavily impact others
+	•	Independent modules for build, test, deployment, and recovery
+	•	Easy debugging due to modular separation
+	•	Code changes in one layer do not heavily impact others
 
 3. Performance
-
-Lightweight interaction between layers
-
-Efficient execution flow from build to deployment
-
-Immediate recovery initiation after failure detection
+	•	Lightweight interaction between layers
+	•	Efficient execution flow from build to deployment
+	•	Immediate recovery initiation after failure detection
 
 4. Reliability
-
-Dedicated failure detection and recovery modules
-
-Reduced Mean Time To Recovery (MTTR)
-
-Controlled rollback mechanism
+	•	Dedicated failure detection and recovery modules
+	•	Reduced Mean Time To Recovery (MTTR)
+	•	Controlled rollback mechanism
 
 5. Security
-
-Role-Based Access Control (RBAC) handled at presentation layer
-
-Secure integration with Git and deployment platforms
+	•	Role-Based Access Control (RBAC) handled at presentation layer
+	•	Secure integration with Git and deployment platforms
 
 Conclusion for Part I
 
 Layered Architecture best fits this project because it provides structured separation, supports intelligent failure recovery, improves maintainability, enhances scalability, and satisfies both functional and non-functional requirements defined in the SRS.
+
